--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 			<div style="display:flex;flex-direction:column; text-align: justify">
 				<div> <font color="#24292E"> Une explosion du nombre de populations déracinées dans le monde depuis 15 ans (UNHCR).</font> </div>
 				<div id="container" > </div>
-				<div> <font color="#24292E"> Plus de déplacés internes que de réfugiés depuis 2006 </font> </div>
-				<div> <font color="#24292E"> Trois fois plus de demandeurs d'asile depuis 2012 (cliquez sur la légende pour voir le changement d'échelles) </font> </div>
+				<div> <font color="#24292E"> Plus de déplacés internes que de réfugiés depuis 2006. </font> </div>
+				<div> <font color="#24292E"> Trois fois plus de demandeurs d'asile depuis 2012. (Cliquez sur la légende pour voir le changement d'échelles) </font> </div>
 
 				</div>
 			
 				<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
-					<p>La distinction entre réfugié, migrant et demandeur d'asile est essentielle : les gouvernements ont des resposabilités différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. En revanche, les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales.
+					<p>La distinction entre réfugié, migrant et demandeur d'asile est essentielle : les gouvernements ont des responsabilités différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. En revanche, les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales.
 					Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.</p>
 					Plus précisément, 
 					<ul>
