--- a/index.html
+++ b/index.html
@@ -568,11 +568,11 @@ $(document).ready(function(){
        },  {
          "name": "The New Arrivals",
          "address": "https://thenewarrivals.eu/", 
-         "note":"500 jours, 25 migrants, 4 journaux européens vont explorer pendant dix-huit mois la vie quotidienne des migrants dans leur pays d’accueil."
+         "note":"500 jours, 25 migrants, 4 journaux européens vont explorer pendant 18 mois la vie quotidienne des migrants dans leur pays d’accueil."
        },{
          "name": "Arte Reportage",
          "address": "http://info.arte.tv/fr/refugies", 
-         "note":"A travers cinq destinations, vingt regards de cinéastes, de photographes, d'écrivains et de dessinateurs de bande dessinée, la série multimédia d'ARTE Reportage vous raconte les camps de réfugiés."
+         "note":"A travers 5 destinations, 20 regards de cinéastes, photographes, écrivains et dessinateurs de BD, la série multimédia d'ARTE Reportage raconte les camps de réfugiés."
        }]
      }]
    };
