--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 					<div class="row">
 						<section class="4u 6u(medium) 12u$(small)">
 							<h3>Nos sources </h3>
-							<p>D'où viennent les chiffres présentés ? Nous nous sommes servis de plusieurs sources pour réaliser nos graphiques. Nous tenons à préciser qu'il est par définition difficile de récolter des données sur les personnes déplacées, et qu'il est nécessaire de croiser plusieurs sources pour refléter au mieux la situation. Nous nous sommes efforcés à n'utiliser que des sources officielles :</p>
+							<p>D'où viennent les chiffres présentés ? Nous tenons à préciser qu'il est par définition difficile de récolter des données sur les personnes déplacées, et qu'il est nécessaire de croiser plusieurs sources pour refléter au mieux la situation. Nous nous sommes efforcés à n'utiliser que des sources officielles :</p>
 							<ul class="alt">
 								<li><a href="http://popstats.unhcr.org/en/overview">UNHCR</a></li>
 								<li><a href="http://www.therefugeeproject.org">The Refugee Project</a></li>
