--- a/index.html
+++ b/index.html
@@ -901,12 +901,10 @@ $(document).ready(function(){
 <div class="container" style="display:flex;    text-align: justify;
     text-justify: inter-word;">
 	
-	<div style="color:#004953,text-justify: inter-word;">  
+	<div style="color:black,text-justify: inter-word;">  
 		<ul>
-		<br>
-			<li> <a href="http://campus-solidaire.strikingly.com/"><b>Camp’us solidaire </b> </a>: lancée par Bastien Vallée (ENSAE 2018) et trois étudiants de HEC (Agathe, Isabelle et François), cette association apolitique travaille en partenariat avec Fraternité en Irak et le Secours Catholique. Elle a recueilli 5200€ lors d’une campagne de crowdfunding solidaire en Octobre 2015. A long terme, Camp’us solidaire cherche à faire le lien entre les étudiants cherchant à agir concrètement et ceux qui ont besoin d’eux. 
+		<br><li> <a href="http://campus-solidaire.strikingly.com/"><b>Camp’us solidaire </b> </a>: lancée par Bastien Vallée (ENSAE 2018) et trois étudiants de HEC (Agathe, Isabelle et François), cette association apolitique travaille en partenariat avec Fraternité en Irak et le Secours Catholique. Elle a recueilli 5200€ lors d’une campagne de crowdfunding solidaire en Octobre 2015. A long terme, Camp’us solidaire cherche à faire le lien entre les étudiants cherchant à agir concrètement et ceux qui ont besoin d’eux. 
 			</li><br>
-
 			<br><li><a href ="https://www.ideas-box.org/index.php/fr/"><b>Ideas Box de Bibliothèques sans Frontières </b> </a> est une médiathèque en kit standardisée, facilement transportable et déployable sur le terrain (Jordanie, Colombie, Ethiopie, la région des Grands Lacs..et aussi en France). Un dispositif robuste et autonome énergétiquement qui propose un contenu adapté aux besoins des populations, à leur langue et leur culture.
 Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 pour inviter à voter pour le projet d’Ideas Box de Bibliothèque Sans Frontières, au Google Impact Challenge. Il a également fait son stage d’ouverture chez BSF.</li> <br>
 		
@@ -931,7 +929,7 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 								<li><a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a></li>
 								<li><a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=KiGiupc3VwA">Data Gueule</a></li>
-							Nous avons également utilisé les photos de <a href="https://www.amazonasimages.com/"><b>Sebastiao Salgado </b></a> pour illustrer notre propos.
+							Nous avons également utilisé les photos de <a href="https://www.amazonasimages.com/"><b>Sebastiao Salgado</b></a> pour illustrer notre propos.
 							</ul>
 						</section>
 						<section class="4u 6u$(medium) 12u$(small)">
