--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@ $(document).ready(function(){
 
 		<h1 style="color:#004953"> Et les ENSAE dans tout ça ?  </h1>
 		
-		<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
+		<div style="color:#004953; width: 70%;text-align: justify;text-justify: inter-word;">  <br>
 					<p>La distinction entre réfugié, migrant et demandeur d'asile est essentielle : les gouvernements ont des responsabilités différentes envers chacun. En effet, les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. En revanche, les réfugiés sont gérés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales.
 					Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.</p>
 					Plus précisément, 
