--- a/index.html
+++ b/index.html
@@ -901,34 +901,16 @@ $(document).ready(function(){
 		
 		<div class="container" style="display:flex;flex-direction:column;">
 			<div style="display:flex;flex-direction:column; text-align: justify">
-				</div>
-			
-				<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
-					<ul>
-					<li> <a href="http://campus-solidaire.strikingly.com/"><b>Camp’us solidaire </b> </a>: lancée par Bastien Vallée (ENSAE 2018) et trois étudiants de HEC (Agathe, Isabelle et François), cette association apolitique travaille en partenariat avec Fraternité en Irak et le Secours Catholique. Elle a recueilli 5200€ lors d’une campagne de crowdfunding solidaire en Octobre 2015. A long terme, Camp’us solidaire cherche à faire le lien entre les étudiants cherchant à agir concrètement et ceux qui ont besoin d’eux. </li>		<li><a href ="https://www.ideas-box.org/index.php/fr/"><b>Ideas Box de Bibliothèques sans Frontières </b> </a> est une médiathèque en kit standardisée, facilement transportable et déployable sur le terrain (Jordanie, Colombie, Ethiopie, la région des Grands Lacs..et aussi en France). Un dispositif robuste et autonome énergétiquement qui propose un contenu adapté aux besoins des populations, à leur langue et leur culture.
-Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 pour inviter à voter pour le projet d’Ideas Box de Bibliothèque Sans Frontières, au Google Impact Challenge. Il a également fait son stage d’ouverture chez BSF.</li> <br>
-					<br><li><a href="https://www.amazonasimages.com/"><b>Sebastiao Salgado </b></a> (inscrit à l’ENSAE en 1969) : le grand photographe d’origine brésilienne a parcouru plus de 100 pays pour exposer les grands conflits et crises humanitaires. Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. </li><br>	
-					</ul>
-				</div>
 			</div>
-
-
-<div class="container" style="display:flex;    text-align: justify;
-    text-justify: inter-word;">
-	
-	<div style="color:black,text-justify: inter-word;">  
-		<ul>
-		<br><li> <a href="http://campus-solidaire.strikingly.com/"><b>Camp’us solidaire </b> </a>: lancée par Bastien Vallée (ENSAE 2018) et trois étudiants de HEC (Agathe, Isabelle et François), cette association apolitique travaille en partenariat avec Fraternité en Irak et le Secours Catholique. Elle a recueilli 5200€ lors d’une campagne de crowdfunding solidaire en Octobre 2015. A long terme, Camp’us solidaire cherche à faire le lien entre les étudiants cherchant à agir concrètement et ceux qui ont besoin d’eux. 
-			</li><br>
-			<br><li><a href ="https://www.ideas-box.org/index.php/fr/"><b>Ideas Box de Bibliothèques sans Frontières </b> </a> est une médiathèque en kit standardisée, facilement transportable et déployable sur le terrain (Jordanie, Colombie, Ethiopie, la région des Grands Lacs..et aussi en France). Un dispositif robuste et autonome énergétiquement qui propose un contenu adapté aux besoins des populations, à leur langue et leur culture.
+			<div style="color:#004953; text-align: justify;text-justify: inter-word;">  <br>
+			<ul>
+			<li> <a href="http://campus-solidaire.strikingly.com/"><b>Camp’us solidaire </b> </a>: lancée par Bastien Vallée (ENSAE 2018) et trois étudiants de HEC (Agathe, Isabelle et François), cette association apolitique travaille en partenariat avec Fraternité en Irak et le Secours Catholique. Elle a recueilli 5200€ lors d’une campagne de crowdfunding solidaire en Octobre 2015. A long terme, Camp’us solidaire cherche à faire le lien entre les étudiants cherchant à agir concrètement et ceux qui ont besoin d’eux. </li>	
+			<li><a href ="https://www.ideas-box.org/index.php/fr/"><b>Ideas Box de Bibliothèques sans Frontières </b> </a> est une médiathèque en kit standardisée, facilement transportable et déployable sur le terrain (Jordanie, Colombie, Ethiopie, la région des Grands Lacs..et aussi en France). Un dispositif robuste et autonome énergétiquement qui propose un contenu adapté aux besoins des populations, à leur langue et leur culture.
 Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 pour inviter à voter pour le projet d’Ideas Box de Bibliothèque Sans Frontières, au Google Impact Challenge. Il a également fait son stage d’ouverture chez BSF.</li> <br>
-		
 			<br><li><a href="https://www.amazonasimages.com/"><b>Sebastiao Salgado </b></a> (inscrit à l’ENSAE en 1969) : le grand photographe d’origine brésilienne a parcouru plus de 100 pays pour exposer les grands conflits et crises humanitaires. Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. </li><br>	
-	</div>
-	<div id="alienor"></div>
-
-</div>
-
+			</ul>
+			</div>
+			</div>
 	</section>
 		
 		<!-- Footer -->
