--- a/index.html
+++ b/index.html
@@ -940,9 +940,9 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 						<section class="4u$ 12u$(medium) 12u$(small)">
 							<h3>Qui sommes-nous ?</h3>
 							<ul class="icons">
-								<li>  <a href="https://www.linkedin.com/in/ali%C3%A9nor-anido-44b80991/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a> Aliénor Anido  </li>
-								<li>  <a href="https://www.linkedin.com/in/qcavalan/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a>  Quentin Cavalan </li>
-								<li>  <a href="#" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a> Adeline Guéret</li>
+								<li>  <a href="https://www.linkedin.com/in/ali%C3%A9nor-anido-44b80991/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a> Aliénor Anido  </li><br>
+								<li>  <a href="https://www.linkedin.com/in/qcavalan/" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a>  Quentin Cavalan </li><br>
+								<li>  <a href="#" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a> Adeline Guéret</li> <br>
 								<li>  <a href="https://fr.linkedin.com/in/ir%C3%A8ne-hu-88a3648b" class="icon rounded fa-linkedin"><span class="label">LinkedIn</span></a>  Irène Hu </li>
 
 							</ul>
