--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 	<font >        Depuis que vous avez ouvert cette page</font>
 <span id="counter">0000</span>
 
-<font> personnes dans le monde ont été déplacées pour cause de conflits ou de catastrophes climatiques (UNHCR). </font>
+<font> personnes dans le monde ont été déplacées pour cause de conflits ou de catastrophes climatiques (<a href="http://www.unhcr.org/576408cd7">UNHCR</a>). </font>
 	 </div>
 <script type="text/javascript">
 counterID=setInterval(counterUpdate, 2500)
