--- a/index.html
+++ b/index.html
@@ -171,11 +171,21 @@
 			
 	<div class="container" style="display:flex;justify-content:space-between;">
 	
-		<div style="color:#004953;  width: 70%;text-align: justify;text-justify: inter-word;"> <br>
-		En 2015, 1,2 millions de personnes ont demandé l’asile à un Etat membre de l’Union européenne. Soit plus du double de l’année précédente et quatre fois plus que durant la dernière décennie. <br>
-		Tous les pays européens sont signataires de la convention de Genève sur l’asile de 1951 et c’est une condition pour entrer dans l’UE. <br>
-		Dans les années 1970, 80% des demandeurs d’asile obtenaient le statut de réfugié. Aujourd’hui, près de 80% sont déboutés. Avant, on abordait l’immigration en termes de main d’œuvre, à présent en termes de sécurité. 	<br>
-		En 1990, les accords de Dublin ont unifié la politique européenne. On assiste à la fin des demandes d’asile multiples – asylum shopping – et au respect de la réponse donnée par un autre pays européen. Ces accords ont été renouvelés en 2003 avec Dublin II, fondés sur le principe « one stop, one shop », obligeant les migrants à demander l’asile dans le premier pays de l’Union où ils ont posé le pied. En conséquence, la plupart des demandeurs d’asile venus d’Asie, du Proche et du Moyen-Orient ont été renvoyés en Grèce, premier pays d’entrée. En 2013, Dublin III a établi qu’un seul Etat membre est « responsable » d’une demande d’asile : c’est donc l’Etat où le demandeur d’asile est enregistré qui décide de l’attribution du statut. <br>
+		<div style="color:#004953;  width: 90%;text-align: justify;text-justify: inter-word;"> <br>
+		En 2015, 1,2 millions de personnes ont demandé l’asile à un Etat membre de l’Union européenne. 
+		Soit plus du double de l’année précédente et quatre fois plus que durant la dernière décennie. <br>
+		Tous les pays européens sont signataires de la convention de Genève sur l’asile de 1951
+		et c’est une condition pour entrer dans l’UE. <br>
+		Dans les années 1970, 80% des demandeurs d’asile obtenaient le statut de réfugié. 
+		Aujourd’hui, près de 80% sont déboutés. 
+		Avant, on abordait l’immigration en termes de main d’œuvre, à présent en termes de sécurité. 	<br>
+		<!--En 1990, les accords de Dublin ont unifié la politique européenne. 
+		On assiste à la fin des demandes d’asile multiples – asylum shopping – et au respect de la réponse donnée par un autre pays européen.
+		Ces accords ont été renouvelés en 2003 avec Dublin II, fondés sur le principe « one stop, one shop », 
+		obligeant les migrants à demander l’asile dans le premier pays de l’Union où ils ont posé le pied.
+		En conséquence, la plupart des demandeurs d’asile venus d’Asie, du Proche et du Moyen-Orient ont été renvoyés en Grèce,
+		premier pays d’entrée. En 2013, Dublin III a établi qu’un seul Etat membre est « responsable » d’une demande d’asile : 
+		c’est donc l’Etat où le demandeur d’asile est enregistré qui décide de l’attribution du statut. <br> -->
 		</div>
 	</div>
 
