--- a/index.html
+++ b/index.html
@@ -172,13 +172,17 @@
 	<div class="container" style="display:flex;justify-content:space-between;">
 	
 		<div style="color:#004953;  width: 90%;text-align: justify;text-justify: inter-word;"> <br>
-		En 2015, 1,2 millions de personnes ont demandé l’asile à un Etat membre de l’Union européenne. 
-		Soit plus du double de l’année précédente et quatre fois plus que durant la dernière décennie. <br>
-		Tous les pays européens sont signataires de la convention de Genève sur l’asile de 1951
-		et c’est une condition pour entrer dans l’UE. <br>
-		Dans les années 1970, 80% des demandeurs d’asile obtenaient le statut de réfugié. 
+		<ul>
+		<li>Tous les pays européens sont signataires de la convention de Genève sur l’asile de 1951
+			et c’est une condition pour entrer dans l’UE. </li>
+		<li> En 2015, 1,2 millions de personnes ont demandé l’asile à un Etat membre de l’Union européenne. 
+		Soit plus du double de l’année précédente et quatre fois plus que durant la dernière décennie.  </li>
+		<li>Dans les années 1970, 80% des demandeurs d’asile obtenaient le statut de réfugié. 
 		Aujourd’hui, près de 80% sont déboutés. 
-		Avant, on abordait l’immigration en termes de main d’œuvre, à présent en termes de sécurité. 	<br>
+		Ceci peut s'expliquer par le changement d'approche adopté par les Etats européens, 
+		qui contrairement à aujourd'hui, abordaient plus l’immigration en termes de main d’œuvre, qu'en termes de sécurité. </li>
+		</ul>
+		
 		<!--En 1990, les accords de Dublin ont unifié la politique européenne. 
 		On assiste à la fin des demandes d’asile multiples – asylum shopping – et au respect de la réponse donnée par un autre pays européen.
 		Ces accords ont été renouvelés en 2003 avec Dublin II, fondés sur le principe « one stop, one shop », 
