--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
 	
 		<div style="color:#004953;  width: 90%;text-align: justify;text-justify: inter-word;"> <br>
 		<ul>
-		<li>Tous les pays européens sont signataires de la convention de Genève sur l’asile de 1951
-			et c’est une condition pour entrer dans l’UE. </li>
+		<li>Tous les pays européens sont signataires de la convention de Genève de 1951
+			et c’est une condition pour entrer dans l’Union Européenne. </li>
 		<li> En 2015, 1,2 millions de personnes ont demandé l’asile à un Etat membre de l’Union européenne. 
-		Soit plus du double de l’année précédente et quatre fois plus que durant la dernière décennie.  </li>
-		<li>Dans les années 1970, 80% des demandeurs d’asile obtenaient le statut de réfugié. 
+		Soit plus du double de l’année précédente et la moitié du nombre de réfugiés accueillis par la Turquie en 2015.  </li>
+		<li>Dans les années 1970, 80% des demandeurs d’asile obtenaient le statut de réfugié en Europe. 
 		Aujourd’hui, près de 80% sont déboutés. 
 		Ceci peut s'expliquer par le changement d'approche adopté par les Etats européens, 
 		qui contrairement à aujourd'hui, abordaient plus l’immigration en termes de main d’œuvre, qu'en termes de sécurité. </li>
