--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ illégaux.
 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px #009688 solid; margin-left:15px;  "/>
 
-  <div class="element2"> <p class="triangle-right left3 " style="font-style: italic;">En France, on a actuellement 250000 entrée et 200000 départ, soit un solde migratoire positif de 500000.
+  <div class="element2"> <p class="triangle-right left3 " style="font-style: italic;">En France, on a actuellement 250000 entrées et 200000 départs, soit un solde migratoire positif de 500000.
 
 </p> </div>
 
