--- a/index.html
+++ b/index.html
@@ -948,12 +948,12 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							<h3>Nos sources </h3>
 							<p>D'où viennent les chiffres présentés ? Nous tenons à préciser qu'il est par définition difficile de récolter des données sur les personnes déplacées, et qu'il est nécessaire de croiser plusieurs sources pour refléter au mieux la situation. Nous nous sommes efforcés à n'utiliser que des sources officielles :</p>
 							<ul class="alt">
-								<li><a href="http://popstats.unhcr.org/en/overview">UNHCR</a></li>
-								<li><a href="http://www.therefugeeproject.org">The Refugee Project</a></li>
-								<li><a href="http://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a></li>
-								<li><a href="http://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
+								<li><a href="https://popstats.unhcr.org/en/overview">UNHCR</a></li>
+								<li><a href="https://www.therefugeeproject.org">The Refugee Project</a></li>
+								<li><a href="https://ec.europa.eu/eurostat/statistics-explained/index.php/Asylum_statistics/fr">Eurostat</a></li>
+								<li><a href="https://www.immigration.interieur.gouv.fr/Info-ressources/Donnees-statistiques/Donnees-de-l-immigration-de-l-asile-et-de-l-acces-a-la-nationalite-francaise/Archives/Statistiques-publiees-en-juillet-2016/Les-demandes-d-asile-statistiques">OFPRA (Office Français de Protection des Réfugiés et Apatrides)</a></li>
 								<li><a href="https://www.youtube.com/watch?v=KiGiupc3VwA">Data Gueule</a></li>
-							Nous avons également utilisé les photos de <a href="https://www.amazonasimages.com/"><b>Sebastiao Salgado</b></a> pour illustrer notre propos.
+							Nous avons également utilisé les photos de <a href="https://www.amazonasimages.com/">Sebastiao Salgado</a> pour illustrer notre propos.
 							</ul>
 						</section>
 						<section class="4u 6u$(medium) 12u$(small)">
