--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ $(document).ready(function(){
        })
        .attr("cursor", "pointer")
        .style("opacity", 0.5)
-       .style("fill", "#eee")
+       .style("fill", "#fff")
        .on("click", function(d, i) {
          window.open(d.address);
        })
@@ -714,7 +714,7 @@ $(document).ready(function(){
        .style("fill", function(d, i) {
          return colVals(iB);
        }) // #1f77b4
-       .attr("font-size", 15)
+       .attr("font-size", 12)
        .attr("cursor", "pointer")
        .attr("dominant-baseline", "middle")
        .attr("alignment-baseline", "middle")
@@ -742,7 +742,7 @@ $(document).ready(function(){
      d3.select("#bubbleItemNote").text("");
 
      var t = svg.transition()
-       .duration(650);
+       .duration(350);
 
      t.selectAll(".topBubble")
        .attr("r", function(d) {
