--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ $(document).ready(function(){
        })
        .attr("cursor", "pointer")
        .style("opacity", 0.5)
-       .style("fill", "#fff")
+       .style("fill", "#eee")
        .on("click", function(d, i) {
          window.open(d.address);
        })
