--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@ $(document).ready(function(){
        },{
          "name": "Arte Reportage",
          "address": "http://info.arte.tv/fr/refugies", 
-         "note":"A travers 5 destinations, 20 regards de cinéastes, photographes, écrivains et dessinateurs de BD, la série multimédia d'ARTE Reportage raconte les camps de réfugiés."
+         "note":"A travers 5 destinations, 20 regards de cinéastes, photographes et écrivains, la série multimédia d'ARTE Reportage raconte les camps de réfugiés."
        }]
      }]
    };
